# advent-of-code-2021

./: Cargo.toml
day1-sonar-sweep/: Cargo.toml
day1-sonar-sweep/src/: main.rs
day10-syntax-scoring/: Cargo.toml
day10-syntax-scoring/src/: main.rs
day11-dumbo-octopus/: Cargo.toml
day11-dumbo-octopus/src/: main.rs
day13-transparent-origami/: Cargo.toml
day13-transparent-origami/src/: main.rs
day16-packet-decoder/: Cargo.toml
day16-packet-decoder/src/: main.rs
day17-trick-shot/: Cargo.toml
day17-trick-shot/src/: main.rs
day2-dive/: Cargo.toml
day2-dive/src/: main.rs
day21-dirac-dice/: Cargo.toml
day21-dirac-dice/src/: main.rs
day25-sea-cucumber/: Cargo.toml
day25-sea-cucumber/src/: main.rs
day3-binary-diagnostic/src/: main.rs
day4-giant-squid/: Cargo.toml
day4-giant-squid/src/: main.rs
day5-hydrothermal-venture/: Cargo.toml
day5-hydrothermal-venture/src/: main.rs
day6-lanternfish/: Cargo.toml
day6-lanternfish/src/: main.rs
day7-the-treachery-of-whales/: Cargo.toml
day7-the-treachery-of-whales/src/: main.rs
day8-seven-segment-search/: Cargo.toml
day8-seven-segment-search/src/: main.rs
day9-smoke-basin/: Cargo.toml
day9-smoke-basin/src/: main.rs
