[workspace]
members = [
    "day1-sonar-sweep",
    "day2-dive",
    "day3-binary-diagnostic",
    "day4-giant-squid",
    "day6-lanternfish",
    "day7-the-treachery-of-whales",
    "day8-seven-segment-search",
    "day9-smoke-basin",
    "day10-syntax-scoring",
    "day11-dumbo-octopus",
    "day16-packet-decoder",
    "day17-trick-shot",
    "day21-dirac-dice",
]
